--- a/backup/views/ideias.html
+++ b/backup/views/ideias.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Renato Xavier Tavares">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="../public/style.css">
 
     <title>Ideias</title>
 </head>
@@ -16,12 +16,12 @@
     <div id="container">    
 
         <header>
-            <a href="./index.html">                
-                <img src="./src/img/Logo-CasaCriativa.png" alt="Imagem da logomarca">
+            <a href="./">                
+                <img src="../public/Logo-CasaCriativa.png" alt="Imagem da logomarca">
             </a>
 
             <nav>
-                <li><a href="./index.html">Início</a></li>
+                <li><a href="./">Início</a></li>
                 <li><a href="#">Ideias</a></li>
                 <li><a href="#" onclick="onOff()" class="button">Nova Ideia</a></li>    
             </nav>
@@ -48,7 +48,7 @@
                         </div>
                     </header>
 
-                    <hr>
+                    <hr />
 
                     <div class="content">
                         <div class="description">
@@ -72,7 +72,7 @@
                         </div>
                     </header>
 
-                    <hr>
+                    <hr />
 
                     <div class="content">
                         <div class="description">
@@ -96,7 +96,7 @@
                         </div>
                     </header>
     
-                    <hr>
+                    <hr />
 
                     <div class="content">
                         <div class="description">
@@ -120,7 +120,7 @@
                         </div>
                     </header>
     
-                    <hr>
+                    <hr />
 
                     <div class="content">
                         <div class="description">
@@ -175,7 +175,7 @@
         </div>
     </div>
 
-    <script src="./src/Javascript/scripts.js"></script>
+    <script src="../public/scripts.js"></script>
 
 </body>
 </html>
