--- a/views/allideas.html
+++ b/views/allideas.html
@@ -4,7 +4,7 @@
        <header>
            <div class="img">
                <img
-                   src="{{idea.img}}"
+                   src="{{idea.image}}"
                    alt="Imagem de {{idea.title}}">
            </div>
 
@@ -22,7 +22,7 @@
                {{idea.description}}
            </div>
 
-           <p align="right"><a href="{{idea.url}}">Ir para idéia</a></p>
+           <p align="right"><a href="{{idea.link}}" target="_blank">Ir para idéia</a></p>
        </div>        
    </div>     
    
