--- a/views/ideias.html
+++ b/views/ideias.html
@@ -31,7 +31,7 @@
 </main>
 
 <footer>
-    Com ❤️ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
+    Com ❤️ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a> e <a href="https://www.linkedin.com/in/renato-xavier-tavares-851681163/" target="_blank">Renato</a>
 </footer>
 
 {% endblock %}
