--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <footer>
-        Com ❤️ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
+        Com ❤️ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a> e <a href="https://www.linkedin.com/in/renato-xavier-tavares-851681163/" target="_blank">Renato</a>
     </footer>
 
 </section>
