--- a/views/modal.html
+++ b/views/modal.html
@@ -2,7 +2,7 @@
     <div class="content">
         <h1>Nova Ideia</h1>
 
-        <form action="">
+        <form action="/ideias" method="POST" onsubmit="return checkFields(event)">
 
             <div class="input-wrapper">
                 <label for="title">Título da ideia</label>
